--- a/PureLib/Properties/Resources.zh-CN.resx
+++ b/PureLib/Properties/Resources.zh-CN.resx
@@ -117,22 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Comma" xml:space="preserve">
+  <data name="Common_Comma" xml:space="preserve">
     <value>，</value>
   </data>
-  <data name="Days" xml:space="preserve">
+  <data name="Common_Days" xml:space="preserve">
     <value>天</value>
   </data>
-  <data name="Hours" xml:space="preserve">
+  <data name="Common_Hours" xml:space="preserve">
     <value>小时</value>
   </data>
-  <data name="Milliseconds" xml:space="preserve">
+  <data name="Common_Milliseconds" xml:space="preserve">
     <value>毫秒</value>
   </data>
-  <data name="Minutes" xml:space="preserve">
+  <data name="Common_Minutes" xml:space="preserve">
     <value>分</value>
   </data>
-  <data name="Seconds" xml:space="preserve">
+  <data name="Common_Seconds" xml:space="preserve">
     <value>秒</value>
+  </data>
+  <data name="ViewModelBase_ExpressionNotProperty_Exception" xml:space="preserve">
+    <value>成员表达式没有指向属性。</value>
+  </data>
+  <data name="ViewModelBase_NotMemberAccessExpression_Exception" xml:space="preserve">
+    <value>表达式没有指向一个成员。</value>
+  </data>
+  <data name="ViewModelBase_StaticExpression_Exception" xml:space="preserve">
+    <value>引用的属性为静态。</value>
   </data>
 </root>
